refactor: optimized post services